[tool.poetry]
name = "lao_tracker"
version = "0.1.0"
description = ""
authors = ["xXLAOKOONXx"]

[tool.poetry.dependencies]
python = "^3.10"
cassiopeia = "^5.0.1"
dash = "^2.3.0"
cassiopeia-diskstore = "^1.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
