[tool.poetry]
name = "lao_tracker"
version = "0.1.0"
description = ""
authors = ["xXLAOKOONXx"]

[tool.poetry.dependencies]
python = "^3.8"
cassiopeia = "^5.0.1"
dash = "^2.3.0"
cassiopeia-diskstore = "^1.1.3"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
