[tool.poetry]
name = "lao_tracker"
version = "0.1.0"
description = ""
authors = ["xXLAOKOONXx"]

[tool.poetry.dependencies]
python = "^3.8"
cassiopeia = "^5.0.1"
dash = "^2.3.0"
cassiopeia-diskstore = "^1.1.3"
gunicorn = "^20.1.0"
pandas = "^1.4.1"
riotwatcher = "^3.2.0"
dash-bootstrap-components = "^1.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"